--- a/ems-backend/src/main/resources/application.properties
+++ b/ems-backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=ems-backend
+spring.datasource.url=jdbc:mysql://localhost:3306/ems 
+spring.datasource.username=root
+spring.datasource.password=yLtmk#1_2
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+
+
+
+
